--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,6 @@
-# NOTE: update this with your service name
 service: minions-booking-api
 
-# Create an optimized package for our functions 
+# Create an optimized package for our functions
 package:
   individually: true
 
@@ -9,18 +8,50 @@ plugins:
   - serverless-bundle # Package our functions with Webpack
   - serverless-offline
   - serverless-dotenv-plugin # Load .env as environment variables
+  
 
 provider:
   name: aws
-  runtime: nodejs10.x
-  stage: dev
+  runtime: nodejs12.x
+  stage: ${opt:stage, 'dev'}
   region: us-east-1
-  # To load environment variables externally
-  # rename env.example to .env and uncomment
-  # the following line. Also, make sure to not
-  # commit your .env.
-  #
-  #environment:
-  #  sampleEnvVar: ${env:SAMPLE_ENV_VAR}
 
+  # These environment variables are made available to our functions
+  # under process.env.
+  environment:
+    tableName: minions
+    SLS_DEBUG:  "*"
 
+  # 'iamRoleStatements' defines the permission policy for the Lambda function.
+  # In this case Lambda functions are granted with permissions to access DynamoDB.
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+
+functions:
+  # Defines an HTTP API endpoint that calls the main function in create.js
+  # - path: url path is /minions
+  # - method: POST request
+  # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
+  #     domain api call
+  # - authorizer: authenticate using the AWS IAM role
+  create:
+
+    handler: create.main
+    events: 
+      - http:
+          path: /minions
+          method: post
+          cors: true
+          authorizer: aws_iam
+
+    
+   
