--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A Node.js starter for the Serverless Framework with async/await and unit test support",
   "main": "handler.js",
   "scripts": {
-    "test": "serverless-bundle test"
+    "prebuild": "aws s3 cp s3://${S3BUCKET}/aws-exports.js ./src/aws-exports.js",
+    "build": "react-scripts build",
+    "deploy": "aws s3 cp ./build s3://${S3BUCKET}/ --recursive",
+    "start": "react-scripts start",
+    "test": "react-scripts test –env=jsdom",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "MIT",
@@ -16,7 +21,8 @@
     "aws-sdk": "^2.606.0",
     "serverless-bundle": "^1.2.5",
     "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3"
+    "serverless-offline": "^5.3.3",
+    "serverless-webpack": "^5.3.1"
   },
   "dependencies": {
     "uuid": "^3.4.0"
