--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,7 @@ plugins:
   - serverless-bundle # Package our functions with Webpack
   - serverless-offline
   - serverless-dotenv-plugin # Load .env as environment variables
+  - serverless-webpack
   
 
 provider:
@@ -20,7 +21,6 @@ provider:
   # under process.env.
   environment:
     tableName: minions
-    SLS_DEBUG:  "*"
 
   # 'iamRoleStatements' defines the permission policy for the Lambda function.
   # In this case Lambda functions are granted with permissions to access DynamoDB.
@@ -37,13 +37,25 @@ provider:
       Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 functions:
-  # Defines an HTTP API endpoint that calls the main function in create.js
-  # - path: url path is /minions
-  # - method: POST request
-  # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
-  #     domain api call
-  # - authorizer: authenticate using the AWS IAM role
+  get:
+    # Defines an HTTP API endpoint that calls the main function in get.js
+    # - path: url path is /minions/{id}
+    # - method: GET request
+    handler: get.main
+    events:
+      - http:
+          path: minions/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
+ 
   create:
+    # Defines an HTTP API endpoint that calls the main function in create.js
+    # - path: url path is /minions
+    # - method: POST request
+    # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
+    #     domain api call
+    # - authorizer: authenticate using the AWS IAM role
 
     handler: create.main
     events: 
@@ -53,5 +65,6 @@ functions:
           cors: true
           authorizer: aws_iam
 
-    
-   
+
+  
+  
