--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,6 @@ plugins:
   - serverless-bundle # Package our functions with Webpack
   - serverless-offline
   - serverless-dotenv-plugin # Load .env as environment variables
-  - serverless-webpack
   
 
 provider:
@@ -37,17 +36,7 @@ provider:
       Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 functions:
-  get:
-    # Defines an HTTP API endpoint that calls the main function in get.js
-    # - path: url path is /minions/{id}
-    # - method: GET request
-    handler: get.main
-    events:
-      - http:
-          path: minions/{id}
-          method: get
-          cors: true
-          authorizer: aws_iam
+
  
   create:
     # Defines an HTTP API endpoint that calls the main function in create.js
@@ -62,6 +51,30 @@ functions:
       - http:
           path: /minions
           method: post
+          cors: true
+          authorizer: aws_iam
+
+  get:
+    # Defines an HTTP API endpoint that calls the main function in get.js
+    # - path: url path is /minions/{id}
+    # - method: GET request
+    handler: get.main
+    events:
+      - http:
+          path: minions/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
+          
+  list:
+    # Defines an HTTP API endpoint that calls the main function in list.js
+    # - path: url path is /notes
+    # - method: GET request
+    handler: list.main
+    events:
+      - http:
+          path: /minions
+          method: get
           cors: true
           authorizer: aws_iam
 
