--- a/serverless.yml
+++ b/serverless.yml
@@ -68,7 +68,7 @@ functions:
           
   list:
     # Defines an HTTP API endpoint that calls the main function in list.js
-    # - path: url path is /notes
+    # - path: url path is /minions
     # - method: GET request
     handler: list.main
     events:
@@ -77,7 +77,18 @@ functions:
           method: get
           cors: true
           authorizer: aws_iam
-
+          
+  update:
+    # Defines an HTTP API endpoint that calls the main function in update.js
+    # - path: url path is /minions/{id}
+    # - method: PUT request
+    handler: update.main
+    events:
+      - http:
+          path: minions/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
 
   
   
